<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="project0.hkandukuri.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
            <TextView
                android:layout_height="50dp"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:text="@string/title"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/title_id"
                />
            <Button
                android:layout_below="@+id/title_id"
                android:id="@+id/first_button"
                style="@style/myButtonStyle"
                android:text="@string/myApp0"
                android:onClick="onClick"
                />
            <Button
                android:layout_below="@+id/first_button"
                style="@style/myButtonStyle"
                android:text="@string/myApp1"
                android:onClick="onClick"
                android:id="@+id/second_button"
                />
            <Button
                android:layout_below="@+id/second_button"
                style="@style/myButtonStyle"
                android:text="@string/myApp2"
                android:onClick="onClick"
                android:id="@+id/third_button"
                />
            <Button
                android:layout_below="@+id/third_button"
                style="@style/myButtonStyle"
                android:text="@string/myApp3"
                android:onClick="onClick"
                android:id="@+id/fourth_button"
                />
            <Button
                android:layout_below="@+id/fourth_button"
                style="@style/myButtonStyle"
                android:text="@string/myApp4"
                android:onClick="onClick"
                android:id="@+id/fifith_button"
                />
            <Button
                android:layout_below="@+id/fifith_button"
                style="@style/myButtonStyle"
                android:text="@string/myApp5"
                android:background="#E91E63"
                android:id="@+id/sixth_button"
                android:onClick="onClick"
                />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>



